--- a/app/src/main/res/layout/activity_configuracoes.xml
+++ b/app/src/main/res/layout/activity_configuracoes.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ConfiguracoesActivity">
 
+    <!-- Incluir o Toolbar na pagina -->
     <include layout="@layout/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
