--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--
+    Cores do Tema Padrão
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
+    -->
+
+    <!-- aqui mudamos as cores padrões, para as do nosso tema -->
     <color name="colorPrimary">#942020</color>
     <color name="colorPrimaryDark">#460A0A</color>
     <color name="colorAccent">#365D99</color>
