--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CadastroActivity">
+    tools:context=".CadastroUsuarioActivity">
 
+    <!-- Incluir o Toolbar na pagina -->
     <include layout="@layout/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
