--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,11 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword" />
 
-
+    <CheckBox
+        android:id="@+id/cb_manter_logado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="manter logado" />
 
     <Button
         android:id="@+id/bt_login_entrar"
